# modbus_client

./: .gitignore  CMakeLists.txt  main.cpp
arduino_slave/: arduino_slave.pde
headers/: entities.h
libs/libmodbus-3.1.10/: Makefile  config.status  libmodbus.pc  libtool
libs/libmodbus-3.1.10/src/: Makefile  libmodbus.la  modbus-data.lo  modbus-rtu.lo  modbus-tcp.lo  modbus.c  modbus.lo
libs/libmodbus-3.1.10/src/.deps/: modbus-data.Plo  modbus-rtu.Plo  modbus-tcp.Plo  modbus.Plo
libs/libmodbus-3.1.10/src/.libs/: libmodbus.lai  libmodbus.so.5.1.0
libs/libmodbus-3.1.10/src/win32/: modbus.dll.manifest
libs/libmodbus-3.1.10/tests/: Makefile  bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
libs/libmodbus-3.1.10/tests/.deps/: bandwidth-client.Po  bandwidth-server-many-up.Po  bandwidth-server-one.Po  random-test-client.Po  random-test-server.Po  unit-test-client.Po  unit-test-server.Po  version.Po
libs/libmodbus-3.1.10/tests/.libs/: bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
src/: entities.h  main.cpp
